# hexchat

./: .gitignore  customize_theme_colors.py  meson.build  readme.md  update_themes.py
data/: meson.build
data/themes/: cyberpunk-neon.theme  default-dark.theme  default-light.theme  dracula.theme  forest-green.theme  github-light.theme  high-contrast.theme  meson.build  midnight-purple.theme  minimal-light.theme  monokai.theme  ocean-blue.theme  pastel-dreams.theme  rainbow-pride.theme  retro-terminal.theme  solarized-dark.theme  solarized-light.theme  sunset-warm.theme  test.theme
src/common/: cfgfiles.c  dcc.c  hexchat.h  inbound.c  outbound.c  proto-irc.c  proto-irc.h  scram.c  ssl.c  text.c  textenums.h  textevents.h  textevents.in
src/fe-gtk/: fe-gtk.c  maingui.c  menu.c  meson.build  palette.c  setup.c  theme.c  theme.h  xtext.c
